--- a/examples/Makefile
+++ b/examples/Makefile
@@ -8,8 +8,8 @@ LDFLAGS ?= -static
 
 all: c-example cpp-example
 
-c-example: examples/c-example.c include/cutest.h
-	$(CC) -Iinclude $(CPPFLAGS) $(CFLAGS) $(LDFLAGS) $^ -o $@
+c-example: c-example.c ../include/cutest.h
+	$(CC) -I../include $(CPPFLAGS) $(CFLAGS) $(LDFLAGS) $^ -o $@
 
-cpp-example: examples/cpp-example.cc include/cutest.h
-	$(CXX) -Iinclude $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) $^ -o $@
+cpp-example: cpp-example.cc ../include/cutest.h
+	$(CXX) -I../include $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) $^ -o $@
