Makefile: Use LDFLAG -static only on Windows by default.
This fixes #4.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,7 +3,10 @@ CC = gcc
 CXX = g++
 CFLAGS ?= -Wall
 CXXFLAGS ?= -Wall
-LDFLAGS ?= -static
+
+ifeq ($(OS),Windows_NT)
+	LDFLAGS ?= -static
+endif
 
 
 all: c-example cpp-example
