Makefile: Add rule for clean.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,13 +3,19 @@ CC = gcc
 CXX = g++
 CFLAGS ?= -Wall
 CXXFLAGS ?= -Wall
+RM ?= rm -f
 
 ifeq ($(OS),Windows_NT)
 	LDFLAGS ?= -static
 endif
 
 
+.PHONY: all clean
+
 all: c-example cpp-example
+
+clean:
+	$(RM) c-example cpp-example
 
 c-example: c-example.c ../include/cutest.h
 	$(CC) -I../include $(CPPFLAGS) $(CFLAGS) $(LDFLAGS) $< -o $@
