--- a/examples/Makefile
+++ b/examples/Makefile
@@ -17,8 +17,8 @@ all: c-example cpp-example
 clean:
 	$(RM) c-example cpp-example
 
-c-example: c-example.c ../include/cutest.h
+c-example: c-example.c ../include/acutest.h
 	$(CC) -I../include $(CPPFLAGS) $(CFLAGS) $(LDFLAGS) $< -o $@
 
-cpp-example: cpp-example.cc ../include/cutest.h
+cpp-example: cpp-example.cc ../include/acutest.h
 	$(CXX) -I../include $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) $< -o $@
